# Pipeline

./: .gitmodules  AGENTS.md  AI_EXPERIENCE_README.md  API_QUICK_REFERENCE.md  ARCHITECTURE_DESIGN.md  CMakeLists.txt  DESIGN_SUMMARY.md  EXPERIENCE_USAGE_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASE1_PROGRESS.md  github.code-workspace
.qoder/rules/: architecture-guidelines.md  cpp_coding_rule.md  objc_coding_rule.md
.sisyphus/plans/: REFACTOR_MASTER_PLAN.md  REFACTOR_PHASE1_BUILDER_API.md
docs/: ASYNC_TASK_DRIVEN_DESIGN.md  REFACTOR_PHASE3_ERROR_HANDLING.md
entities/cpu/: FaceDetectionEntity.cpp  FaceDetectionEntity.h
entities/gpu/: BeautyEntity.cpp  BeautyEntity.h  FilterEntity.cpp  FilterEntity.h
include/pipeline/: Pipeline.h  PipelineFacade.h  PipelineNew.h
include/pipeline/core/: PipelineConfig.h  PipelineConfigJson.h  PipelineError.h  PipelineExecutor.h  PipelineGraph.h  PipelineManager.h
include/pipeline/data/: EntityTypes.h  FramePacket.h  FramePort.h
include/pipeline/entity/: CPUEntity.h  CompositeEntity.h  GPUEntity.h  IOEntity.h  MergeEntity.h  OutputEntityExt.h  ProcessEntity.h
include/pipeline/input/: FrameSynchronizer.h  InputEntity.h  InputFormat.h
include/pipeline/input/android/: OESTextureInputStrategy.h
include/pipeline/input/ios/: PixelBufferInputStrategy.h
include/pipeline/output/: DisplaySurface.h  OutputConfig.h  OutputEntity.h
include/pipeline/output/android/: AndroidEGLSurface.h
include/pipeline/output/ios/: iOSMetalSurface.h
include/pipeline/platform/: PlatformContext.h  PlatformStrategy.h
include/pipeline/pool/: FramePacketPool.h  TexturePool.h
include/pipeline/utils/: PipelineLog.h
script/: build_android.sh  build_ios.sh  build_macos.sh  generate_xcode_project.sh
src/: Pipeline.cpp  PipelineBuilder.cpp  PipelineFacade.cpp  PipelineImpl.cpp  PipelineImpl.h
src/core/: PipelineConfig.cpp  PipelineConfigJson.cpp  PipelineError.cpp  PipelineExecutor.cpp  PipelineGraph.cpp  PipelineManager.cpp
src/data/: FramePacket.cpp  FramePort.cpp
src/entity/: CPUEntity.cpp  CompositeEntity.cpp  GPUEntity.cpp  IOEntity.cpp  MergeEntity.cpp  OutputEntityExt.cpp  ProcessEntity.cpp
src/input/: FrameSynchronizer.cpp  InputEntity.cpp
src/input/android/: OESTextureInputStrategy.cpp
src/input/ios/: PixelBufferInputStrategy.mm
src/output/: OutputEntity.cpp
src/output/android/: AndroidEGLSurface.cpp
src/output/ios/: iOSMetalSurface.mm
src/platform/: AndroidEGLContextManager.cpp  IOSMetalContextManager.mm  PlatformContext.cpp  PlatformStrategy.cpp
src/pool/: FramePacketPool.cpp  TexturePool.cpp
src/utils/: PipelineLog.cpp
tests/: test_pipeline_error.cpp  test_pipeline_json.cpp  test_pipeline_new.cpp  test_platform_strategy.cpp
tests/platform/: test_ios_platform_adapter.mm  test_platform_context.cpp
